Back translate Sketch output to SyGuS expression