@@ -2,6 +2,8 @@ package sketch.api.sygus.solvers;
 
 import sketch.api.sygus.lang.SynthFunction;
 import sketch.api.sygus.lang.expr.SygusExpression;
+import sketch.api.sygus.lang.grammar.Grammar;
+import sketch.api.sygus.lang.grammar.Production;
 import sketch.api.sygus.util.exception.OutputParseException;
 import sketch.compiler.ast.core.Function;
 import sketch.compiler.ast.core.SymbolTable;
@@ -23,25 +25,39 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 public class SynthResultExtractor extends SymbolTableVisitor {
-    private List<SynthFunction> targetFunctions;
-    private Set<String> targetFunctionSymbols;
+    private Map<String, SynthFunction> targetFunctionMap;
     private Map<String, SygusExpression> synthResult;
+    private Set<String> nonterminals;
+    private Map<String, Production> productionMap;
     private ValueOracle oracle;
+    private VarDeclHints varDeclHints;
 
-    public SynthResultExtractor(List<SynthFunction> targetFunctions, ValueOracle oracle) {
+    public SynthResultExtractor(
+            List<SynthFunction> targetFunctions,
+            ValueOracle oracle,
+            VarDeclHints varDeclHints
+    ) {
         super(null);
-        this.targetFunctions = targetFunctions;
-        this.targetFunctionSymbols = targetFunctions.stream()
-                .map(SynthFunction::getFunctionID)
-                .collect(Collectors.toSet());
+        this.targetFunctionMap = targetFunctions.stream()
+                .collect(Collectors.toMap(SynthFunction::getFunctionID, synthFunction -> synthFunction));
         this.synthResult = new HashMap<>();
         this.oracle = oracle;
+        this.varDeclHints = varDeclHints;
+    }
+
+    public Map<String, SygusExpression> getSynthResult() {
+        return synthResult;
     }
 
     public Object visitFunction(Function func)
     {
         String functionName = func.getName();
-        if (targetFunctionSymbols.contains(functionName)) {
+        if (targetFunctionMap.containsKey(functionName)) {
+            Grammar g = targetFunctionMap.get(functionName).getGrammar();
+            productionMap = g.getRules().stream()
+                    .collect(Collectors.toMap(rule -> rule.getLHS().getName(), rule -> rule));
+            nonterminals = productionMap.keySet();
+
             SygusExpression e;
 
             Statement body = func.getBody();
@@ -54,30 +70,24 @@ public class SynthResultExtractor extends SymbolTableVisitor {
                 throw new OutputParseException("Failed to get main part of implementation body");
             }
 
-            Pair<Integer, Statement> choice = getChoice(mainImpl);
-            System.out.println(choice.getFirst());
-            System.out.println(choice.getSecond());
-
-            // TODO Implement
-            e = null;
+            Production startProd = g.getRules().get(0);
+            e = extractExpression(startProd, mainImpl);
 
             synthResult.put(functionName, e);
         }
 
-        Object result = super.visitFunction(func);
-        return result;
+        return super.visitFunction(func);
     }
 
-    public Pair<Integer, Statement> getChoice(Statement mainImpl) {
+    private SygusExpression extractExpression(Production prod, Statement mainImpl) {
         List<Statement> stmts = ((StmtBlock) mainImpl).getStmts();
         Statement condsBlock = stmts.get(stmts.size() - 1);
         stmts = ((StmtBlock) condsBlock).getStmts();
+        Map<String, SygusExpression> intermediateVars = new HashMap<>();
 
+        // Find the first conditional block
         int idx = 0;
         for(Statement stmt: stmts) {
-            System.out.println(idx);
-            System.out.println(stmt.getClass());
-            System.out.println(stmt);
             if (stmt instanceof StmtBlock) {
                 List<Statement> innerStmts = ((StmtBlock) stmt).getStmts();
                 if (innerStmts.get(innerStmts.size() - 1) instanceof StmtIfThen)
@@ -95,8 +105,9 @@ public class SynthResultExtractor extends SymbolTableVisitor {
         Type t = firstStar.getType();
         ExprConstInt value = (ExprConstInt) oracle.popValueForNode(firstStar.getDepObject(0), t);
         if (value.getVal() != 0)
-            return new Pair(0, firstConditional.getCons());
+            return constructExpressionFromChoice(prod, intermediateVars, 0);
 
+        // If the first conditional was not chosen, look at other conditional blocks
         for (idx = firstCond + 1; idx < stmts.size(); idx++) {
             List<Statement> block = ((StmtBlock) stmts.get(idx)).getStmts();
 
@@ -105,12 +116,19 @@ public class SynthResultExtractor extends SymbolTableVisitor {
                     .map(innerStmt -> (StmtIfThen) innerStmt)
                     .collect(Collectors.toList());
 
+            List<Pair<String, Integer>> varDeclList = varDeclHints
+                    .varDeclsForChoice(prod.getLHS().getName(), idx - firstCond);
+
+            // Handle variable declaration which appears before choice block
+            int cnt = 0;
             for(StmtIfThen stmtInner: ifThenStmts.subList(0, ifThenStmts.size() - 1)) {
                 StmtBlock innerBlock = (StmtBlock) ((StmtBlock) stmtInner.getCons()).getStmts().get(0);
+                Pair<String, Integer> varDeclHint = varDeclList.get(cnt++);
+                String nonterminalID = varDeclHint.getFirst();
+                String varID = String.format("var_%s_%d", nonterminalID, varDeclHint.getSecond());
 
-                Pair<Integer, Statement> innerChoice = getChoice(innerBlock);
-                System.out.println(innerChoice.getFirst());
-                System.out.println(innerChoice.getSecond());
+                SygusExpression innerExpr = extractExpression(productionMap.get(nonterminalID), innerBlock);
+                intermediateVars.put(varID, innerExpr);
             }
 
             StmtIfThen stmt = ifThenStmts.get(ifThenStmts.size() - 1);
@@ -119,9 +137,18 @@ public class SynthResultExtractor extends SymbolTableVisitor {
             t = star.getType();
             value = (ExprConstInt) oracle.popValueForNode(star.getDepObject(0), t);
             if (value.getVal() != 0)
-                return new Pair(idx - firstCond, stmt.getCons());
+                return constructExpressionFromChoice(prod, intermediateVars, idx - firstCond);
         }
 
         throw new OutputParseException("Failed to parse generator choice");
+    }
+
+    private SygusExpression constructExpressionFromChoice(
+            Production prod,
+            Map<String, SygusExpression> intermediateVars,
+            int choice
+    ) {
+        SygusExpressionBuilder builder = new SygusExpressionBuilder(nonterminals, intermediateVars);
+        return builder.doRHSTerm(prod.getRHSList().get(choice));
     }
 }
